[tool.poetry]
name = "berycker"
version = "0.1.5"
description = "Docker-like tool to set up a headless RaspberryPi or linux"
readme = "README.rst"
license = "MIT"
repository = "https://github.com/basashi-G/berycker"
homepage = "https://probio.basashi.tech/introduction/"
authors = ["Tomoki Murayama <muratomo.0205@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psutil = "^5.7.2"
paramiko = "^2.7.2"
termcolor = "^1.1.0"
fire = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
berycker = "berycker.cli:main"
